src/test/deca/syntax/invalid/class/field/missing_type_11.deca
// Description:
//    Tests a syntactically incorrect program for a field declaration missing a type
//
// Results:
//    Line 10 : Error, expected type.
//
// History:
//    created on 07/01/2025

class TestClass {
    a = 10;
    float b = 10.0;
}